fix: fixed image endpoint #244blv-174